--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 02.02.2022 08:33:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 02.02.2022 09:12:05</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -171,7 +171,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s kaparovou vinnou omackou, pecene brambory s cervenou cibuli a ruzickovou kapustou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovou vinnou omackou, pecene brambory s cervenou cibuli a ruzickovou kapustou, salatek 169</li><li>Burrito s restovanymi gyros nudlickami z krutich prsou, kukurici, okurkami, rajcaty a pekingskym zelim, zeleninovy bulgur, jogurtovy dip, salatek {L} 139</li><li>Rostbif z hoveziho rostence s krenovou majonezou, nastavovana kase {stouchane brambory se smazenou cibulkou a krupkami}, salatek {L} 169</li><li>Arabsky smazeny cizrnovy falafel, jogurovy dip, zeleninovy bulgur, salatek {L} 139</li></ol>
+<ol><li>Peceny jihocesky pstruh s holandskou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 139</li><li>Peceny filet z cerstve bile tresky s holandskou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Ramen s pecenym marinovanym selecim, pak coj, psenicnymi nudlemi a sazenym vejcem v silnem hovezim vyvaru s bylinkami a mungo klicky {L} 139</li><li>Grilovane kofte z divocaka a danka s omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 165</li><li>Smazena jasminova ryze s grilovanym tempehem, halloumi a zeleninou, arasidova omacka, salatek 139</li></ol>
 </td>
 </tr>
 </table>
