--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 03.02.2022 08:33:35</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 03.02.2022 09:12:37</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 03. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a vepřovým</strong>
+<strong>Tomatová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová roláda na rozmarýnu s rýží</strong>
+<strong>Srbské vepřové rizoto se sýrem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							133,-
 						</span>
 </p>
 <p>
-<strong>Croque monsieur na trhaném salátku s dijonským dresinkem</strong>
+<strong>Uzená krkovička se špenátem a bramborovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							135,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 3.2.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie bez lepku </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Cheesecake z bílé čokolády </div>
+<div class="cena">75 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bezlepková bábovka s kokosem</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Minestrone se zeleninou a červenou čočkou - samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Minestrone se zeleninou a červenou čočkou - s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí prso na rozmarýnu a bílém víně, pečená zelenina, smetanová omáčka <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vídeňská hovězí roštěná, basmati rýže, zakysaná smetana, pažitka <em title="Obiloviny obsahující lepek">1</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Cizrna na kari, dušená rýže, koriandr, sezam <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -128,7 +173,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s holandskou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 139</li><li>Peceny filet z cerstve bile tresky s holandskou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Ramen s pecenym marinovanym selecim, pak coj, psenicnymi nudlemi a sazenym vejcem v silnem hovezim vyvaru s bylinkami a mungo klicky {L} 139</li><li>Grilovane kofte z divocaka a danka s omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 165</li><li>Smazena jasminova ryze s grilovanym tempehem, halloumi a zeleninou, arasidova omacka, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a dresinkem z celozrnne horcice, bramborovy salat s cervenou repou, petrzelkou, cibulkou a creme fraiche 139</li><li>Spagety s chobotnici, cerstvymi slavkami, baby spenatem, pestem s rajcaty, petrzelkou a parmezanem, citron {L} 175</li><li>Laosky larb s veprovym masem, cerstvou zeleninou, ryzovymi nudlemi, zelenymi bylinkami a sladkokyselou zalivkou s chilli a citronovou travou 139</li><li>Smazene teleci rizecky, bramborovy salat s cervenou repou, petrzelkou, cibulkou a creme fraiche, citron {L} 169</li><li>Recka fava ze zluteho hrachu s olivami, balkanskym syrem a salotkou,  arabske placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
